# KarukuResize

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  0204-追加実装する機能.md  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  KarukuResize.spec  LICENSE  QUICK_START.md  README.md  REFACTORING_IMPLEMENTATION_GUIDE.md  REFACTORING_PLAN.md  TECHNICAL_DEBT_ANALYSIS.md  design.md  drag_drop_handler.py  error_handler.py  gui_integration_plan.md  history_manager.py  hook-tkinterdnd2.py  image_preview.py  image_processor_controller.py  japanese_font_utils.py  karuku_light_theme.json  karuku_settings.json  karukuresize.spec  progress_tracker.py  pyproject.toml  pyrightconfig.json  pytest.ini  quick_gui_test.py  report.html  requirements-build.txt  resize_core.py  resize_gui.py  resize_images.py  resize_images_gui-old.py  resize_images_gui.py  resize_images_gui_backup.py  (+22 more)
.ai_memory/现状：02月09日09时17分/: 02月09日09时-まとめ＆作業手順.md  02月09日09时17分-セッションログ.txt  serena_memory_payload.md
.ai_memory/現状：02月10日16時58分/: 02月10日16時58分-セッションログ.txt
.ai_memory/計画: 2月10日16時49分/: 00_目次.md  01_ソクラテス式内省と結論.md  02_セッション調査結果_スコープ定義.md
.ai_memory/計画: 2月10日17時46分/: 00_目次.md  01_ソクラテス式議論_記録対象と結論.md  02_セッション調査結果_要求と合意事項.md  03_コード実態_GUI_保存パイプライン.md  04_UIカラースキーム切替_実装計画.md  05_プロモード_メタデータプレビュー_実装計画.md  06_外部調査_公式情報要点.md  07_Context7調査メモ.md  08_タスク分解と実装順序.md  09_スケジュール_検証計画.md
.ai_memory/計画_2月10日16時49分/: 03_プロジェクト現状_現役コードアーキテクチャ.md  04_GUI機能現況と改修対象.md  05_メタデータ技術調査_WIC_Pillow.md  06_実装計画_簡易モード_プロモード.md  07_検証計画_受け入れ基準.md  08_スケジュール_2026-02-10起点.md  09_参照情報_出典と確認範囲.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: checkpoint_2026-02-18_1547_jst_gui_refactor_status.md  checkpoint_2026-02-19_1206_jst_ui_format_and_uvsync.md  checkpoint_2026-02-19_1207_jst_ui_format_next.md  checkpoint_2026-02-19_1607_jst_reboot_sync_plan.md  checkpoint_2026-03-13_1342_jst_dialog_centering_and_windows_resume.md  checkpoint_2026-03-13_1657_jst_ui_polish_and_exe_theme_followup.md  checkpoint_2026-03-18_1128_jst_batch_ratio_preview_archive.md  checkpoint_2026-03-26_1009_jst_build_pyright_topbar.md
archive/: README-CLI.bk  README.bk  report.html  windows_jp_test.py
archive/docs/: gui_development_plan.md  gui_image_processing_implementation_improved.md  後で実行ー機能拡張Squoosh.md
build_scripts/: build_local.py
docs/: BUILDING.md  CLAUDE.md  INSTALLATION.md  QUICK_START.md  TkEasyGUI.md  UI_REDESIGN_PREP.md  WINDOWS_GUIDE.md  WORK_SESSION_SUMMARY.md  WSL2_GUIDE.md  api_reference.md  developer_guide.md  gui_design_guide.md  ui-current-vs-proposed.html  ui-mockup.html  ui-v2-mockup.html  後で実行ー機能拡張Squoosh.md
karukuresize/gui/: main_window.py  main_window_complete.py  main_window_extended.py
karukuresize/models/: resize_settings.py
karukuresize/services/: history_service.py  image_service.py  preset_service.py  settings_service.py
plan-ui0313/: TODO.md  iken.md
plan0218/: 01_gui_app責務縮小計画.md  02_UI領域モジュール分割計画.md  03_デザイントークン一元化計画.md  04_文言生成集約計画.md  05_表示モード切替統一計画.md  06_変更影響面最小化計画.md  07_モジュール契約定義.md  08_Tkinter実装規約.md  09_受け入れ試験マトリクス.md  third_party_impl_request.md
scripts/: generate_icon_pngs.py  resize_images.py  wsl-gui.sh
src/karuku_resizer/: __init__.py  build_exe.py  gui_app.py  gui_app_backup.py  gui_settings_store.py  help_content.py  help_dialog.py  icon_loader.py  image_processor_controller.py  image_save_pipeline.py  karuku_metallic_theme.json  operation_flow.py  processing_preset_store.py  resize_core.py  runtime_logging.py  settings_manager.py  ui_bootstrap.py  ui_detail_controls.py  ui_display_policy.py  ui_file_list_panel.py  ui_file_load_helpers.py  ui_main_panel.py  ui_metadata_panel.py  ui_preview_panel.py  ui_save_helpers.py  ui_settings_dialog.py  ui_statusbar.py  ui_text_presenter.py  ui_theme_tokens.py  ui_tooltip_content.py  ui_topbar.py  validators.py
tests/: conftest.py  create_test_images.py  test_basic.py  test_batch_resize_plan.py  test_cli_discovery.py  test_cli_summary_output.py  test_drag_drop_helpers.py  test_gui_settings_store.py  test_image_save_pipeline.py  test_input_sources_drag_drop_guard.py  test_main_layout_contract.py  test_operation_flow.py  test_processing_preset_store.py  test_recent_settings_helpers.py  test_recursive_discovery.py  test_resize_core.py  test_resize_core_logging.py  test_runtime_logging.py  test_settings_header_watchers.py  test_tooltip_manager.py  test_topbar_density.py  test_ui_bootstrap_selection.py  test_ui_display_policy.py  test_ui_file_list_panel_selection.py  test_ui_save_helpers.py  test_ui_settings_dialog.py  test_ui_text_presenter.py  test_ui_topbar_contract.py  test_view_models.py  test_window_geometry_constraints.py  test_window_icon_resolution.py
tests/legacy/: test_batch_processing.py  test_complete_architecture.py  test_drag_drop.py  test_error_handling.py  test_gui.py  test_integration.py  test_minimal_gui_features.py  test_new_architecture.py  test_preview_fix.py  test_preview_memory.py  test_preview_responsive.py  test_refactored_gui.py  test_refactoring.py  test_ui_fix.py
次の実装計画：2月10日11時18分/: 00_目次.md  01_セッション調査結果_リポジトリ実態.md  02_CLI_GUI機能比較_実行可能性ベース.md  03_EXIF機能設計_ユーザー視点と技術設計.md  04_実装計画_Phase設計.md  05_スケジュール案_個人開発前提.md  06_参照情報と検証ログ.md  07_総合計画書.md  08_実装進捗ログ_開始.md
(+56 files in other folders)
