[project]
name = "karuku-resizer"
version = "0.2.1"
description = "KarukuResize:日本語対応の画像リサイズ・圧縮ツール（GUI対応版・Windows長パス対応）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "tsutomu-n" },
]
keywords = ["image", "resize", "compression", "gui", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "loguru>=0.7.3,<0.8.0",
    "rich>=13.7.1,<15.0.0",
    "pillow>=9.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "TkEasyGUI>=0.2.20,<0.3.0",
    "emoji>=2.0.0,<3.0.0",
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.3.0",
    "matplotlib>=3.8.0",
    "python-dateutil>=2.8.2",
    "darkdetect>=0.7.1",
    "pillow-avif-plugin>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/tsutomu-n/KarukuResize"
Repository = "https://github.com/tsutomu-n/KarukuResize"
Issues = "https://github.com/tsutomu-n/KarukuResize/issues"

[project.scripts]
# GUIエントリポイント（旧 karukuresize-gui を新パスへ）
karukuresize-gui = "karuku_resizer.gui_app:main"
karukuresize-cli = "karuku_resizer.resize_core:main"
karuku-resizer = "karuku_resizer.gui_app:main"
karukuresize-build-exe = "karuku_resizer.build_exe:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "ruff>=0.4.4",
    "pyinstaller>=6.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "src/karuku_resizer/resize_core.py",  # パーサバグ回避で除外
    "tests/legacy",  # 旧アーキテクチャ検証の遺産テストを除外
]

[tool.ruff.lint]
# 基本的に全チェック対象にし、必要なものを無視
ignore = [
    "F401",  # 未使用のインポート
    "F841",  # 未使用の変数
    "E501",  # 行が長すぎる
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*_test.py" = ["F841"]
